Revision history for Perl extension Apache2::AuthCookieDBI.

2.05 - NOT YET RELEASED
       Fixed bug in _get_cipher_type() where it was not memoizing the
       Crypt::CBC objects.
       
2.04 - Fri Nov 28 15:41:33 PST 2008
       Incorporated bug fix for authen_ses_key() provided by
       Carl Gustafsson. authen_ses_key() was not properly handling
       any extra_session_info - the fix is to get $hashed_string with
          my $hashed_string = pop @rest;

       Also releasing the work done between April 26, 2005 and February 4, 2007,
       plus bug fix for authen_ses_key
       - Added basic framework for unit tests.
       - Factored out some of the DBI code into new methods:
         - _dbi_connect()
         - _get_crypted_password()

       - Changes to satisfy Perl::Critic, e.g.
         - Removed function prototypes (they are ignored for methods.)
         - Cleaned up regular expressions: use /x, etc.

2.03 - Mon Apr 25 10:01:04 PDT 2005
       Incorporated Lance P Cleveland's changes porting module to mod_perl 1.999_22
       (That is, Version 2.0.0-RC5 - April 14, 2005)
       Mainly involves changing almost all references to Apache:: to Apache2::
       
       Also some minor documentation changes.


2.02 - Tue Apr 12 17:58:40 PDT 2005
       Minor documentation fix. Noted that SecretKeyFile has been
       replaced by SecretKey.
       

2.0.1 - Fixed bug in  group()
  It was expecting the list of groups to be already split up.

2.0 - mod_perl 2 version

0.01  Mon Apr  3 10:50:32 2000
	- original version; created by h2xs 1.19
