@@ -1,4 +1,4 @@
-# $Header: /Users/matisse/Desktop/CVS2GIT/matisse.net.cvs/Apache-AuthCookieDBI/Attic/Makefile.PL,v 1.7 2008/11/28 23:42:57 matisse Exp $
+# $Header: /Users/matisse/Desktop/CVS2GIT/matisse.net.cvs/Apache-AuthCookieDBI/Attic/Makefile.PL,v 1.8 2009/04/26 17:32:37 matisse Exp $
 use strict;
 use warnings;
 
@@ -12,7 +12,7 @@ WriteMakefile(
     LICENSE => 'lgpl',
 
     #'VERSION_FROM' => 'AuthCookieDBI.pm', # finds $VERSION
-    VERSION   => '2.04',
+    VERSION   => '2.05',
     PREREQ_PM => {
         'mod_perl2'           => '1.999022',
         'Apache2::AuthCookie' => '3.08',
